--- a/styles/base.css
+++ b/styles/base.css
@@ -1,3 +1,8 @@
 body{
-  background-color: #FFA07A;
+ background-color:SteelBlue;
+font: 15px Verdana, sans-serif;
+color: Black;
+border: 2px solid #0000FF;
+padding-left:13px;
+
 }
